--- a/frontend/reactjs-antd/src/index.html
+++ b/frontend/reactjs-antd/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>React-Antd-Router</title>
+    <title>Gokhany|TwitterClone</title>
 </head>
 
 <body>
